--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Oct 23 20:42:43 CDT 2016
-sdk.dir=C\:\\Users\\Ali\\AppData\\Local\\Android\\sdk
+#Mon Oct 24 19:39:10 CDT 2016
+sdk.dir=C\:\\Users\\Caroline\\AppData\\Local\\Android\\sdk
