logout and nav drawer in all activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,11 @@
         <activity android:name=".activities.GroceryActivity" />
         <activity android:name=".activities.AddGroceryItemActivity" />
 
-        <receiver android:name=".notifications.AlarmReceiver" />
+        <receiver android:name=".notifications.AlarmReceiver" /><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
     </application>
 
