--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 30 16:04:18 CST 2016
-sdk.dir=C\:\\Users\\Caroline\\AppData\\Local\\Android\\sdk
+#Wed Nov 30 18:44:23 CST 2016
+sdk.dir=C\:\\Users\\Ali\\AppData\\Local\\Android\\sdk
